# arch-assessor

./: .gitignore  CONTRIBUTING.md  GETTING_STARTED.md  GUIDE.html  IMPLEMENTATION_STATUS.md  LICENSE  PRD.md  README.md  SECURITY.md  STORYBOARD.html  TRACEABILITY.md  index.html  pyproject.toml  requirements.txt  serve.mjs
.claude/: launch.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/PULL_REQUEST_TEMPLATE/: rule.md
.github/workflows/: ci.yml  corpus.yml
decisions/: 0001-record-architecture-decisions.md  0002-offline-hcl-parsing-with-python-hcl2.md  0003-declarative-yaml-rules-not-code.md  0004-three-valued-verdict-logic.md  0005-stdlib-cli-and-rendering.md  0006-byte-deterministic-output.md  0007-license-and-open-core.md  0008-ingest-sarif-not-build-scanners.md  README.md
specs/: 000-overview.md  001-architecture-graph-schema.md  002-terraform-parser.md  003-rule-format-and-framework-mappings.md  004-evaluation-engine.md  005-report-renderer.md  006-cli.md  007-nonfunctional-requirements.md  008-threat-model.md  009-test-strategy.md  010-lifecycle-versioning-support.md  011-rule-pack-governance.md
src/archassessor/: __init__.py
src/archassessor/cli/: __init__.py  main.py
src/archassessor/engine/: __init__.py  conditions.py  evaluate.py
src/archassessor/graph/: __init__.py  model.py
src/archassessor/ingest/: __init__.py
src/archassessor/ingest/terraform/: __init__.py  mappings.py  parser.py
src/archassessor/report/: __init__.py  common.py  html.py  json_out.py  markdown.py
src/archassessor/rules/: __init__.py  loader.py  schema.py
src/archassessor/rules/builtin/: MAPPING-REVIEWS.md  data.yaml  network.yaml  operations.yaml  reliability.yaml  security.yaml
tests/: conftest.py  gen_fixture.py  test_benchmarks.py  test_cli.py  test_corpus.py  test_engine.py  test_graph.py  test_hostile.py  test_properties.py  test_report.py  test_report_golden.py  test_rules_loader.py  test_terraform_mappings.py  test_terraform_parser.py
tests/corpus/: repos.txt
tests/fixtures/reports/: empty.html  empty.json  empty.md  empty_with_passes.html  empty_with_passes.md  rich.html  rich.json  rich.md  rich_with_passes.html  rich_with_passes.md
tests/fixtures/rules_bad/: bad_severity.yaml  dup_and_typo.yaml
tests/fixtures/rules_colliding/: collide.yaml
tests/fixtures/terraform/all_broken/: bad2.tf
tests/fixtures/terraform/broken/: bad.tf  good.tf
tests/fixtures/terraform/count_and_remote_module/: main.tf
tests/fixtures/terraform/dynamodb/: main.tf
tests/fixtures/terraform/lb_variants/: internet_facing.tf  main.tf
tests/fixtures/terraform/local_module/: main.tf
tests/fixtures/terraform/local_module/modules/net/: main.tf
tests/fixtures/terraform/open_sg/: main.tf
tests/fixtures/terraform/parser_edge_cases/: main.tf
tests/fixtures/terraform/queue_topic_variants/: main.tf
tests/fixtures/terraform/s3_modifiers/: main.tf
tests/fixtures/terraform/sg_edge_cases/: main.tf
tests/fixtures/terraform/simple/: main.tf
tests/fixtures/terraform/unmapped/: main.tf
tests/fixtures/terraform/variables/: main.tf
