[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "arch-assessor"
description = "Deterministic architecture assessment and validation platform"
readme = "README.md"
license = { text = "Apache-2.0" }
authors = [{ name = "Deepak Dobariyal" }]
keywords = ["architecture", "assessment", "terraform", "compliance", "governance"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.13",
]
requires-python = ">=3.13"
dependencies = [
  "python-hcl2==8.1.2",
  "PyYAML==6.0.3",
]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/deepakd0/arch-assessor"
Repository = "https://github.com/deepakd0/arch-assessor"
Issues = "https://github.com/deepakd0/arch-assessor/issues"

[project.scripts]
archscan = "archassessor.cli.main:entry"

[tool.hatch.version]
path = "src/archassessor/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/archassessor"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "--strict-markers"
markers = [
  "benchmark: performance tests (spec 009 §5)",
  "corpus: real-world Terraform corpus tests (spec 009 §6)",
]

[tool.coverage.run]
source = ["src/archassessor"]
branch = true

[tool.mypy]
python_version = "3.13"
mypy_path = "src"

[tool.ruff]
line-length = 100
target-version = "py313"
extend-exclude = [".git", "venv", "build", "dist"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "UP", "C4"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["archassessor"]
